package io.github.daniil547.domain;

import java.util.List;

public class CardList extends NestedPage
                      implements Copyable<CardList>,
                                 PartiallyCopyable<CardList> {
    private List<Card> cards;
    private boolean active;


    /*TODO: accessors*/
    /*TODO: constructors*/
    /*TODO: other methods*/
    /*TODO: implement*/
}
