package io.github.daniil547.domain;

import java.util.List;

public class CheckList<E> implements ListableCardElement<CheckableItem>,
                                     Copyable<CheckList>{
    private String name;
    private List<CheckableItem> items;


    /*TODO: accessors*/
    /*TODO: constructors*/
    /*TODO: implement*/

}
