package io.github.daniil547.domain;


public abstract class NestedPage {
    private String title;
    private String name;
    private String description;

    /*TODO: accessors*/
}
