package io.github.daniil547.domain;

import java.net.URL;
import java.util.List;
import java.util.Set;

public class Workspace extends NestedPage {
    private URL companyWebsiteUrl;
    private WorkspaceVisibility visibility;
    private Set<Member> members;
    private List<Board> boards;

    /*TODO: accessors*/
    /*TODO: constructors*/
    /*TODO: other methods*/
}
